2015-03-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/drawing_wand.c (DrawPushGraphicContext): Silence Coverity
	10151 "Dereference after null check".

2015-03-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/meta.c (parse8BIM): Silence Coverity 10159 "Explicit null
	dereferenced".
	(parse8BIMW): Silence Coverity 10144 "Explicit null dereferenced".

	* coders/uil.c (WriteUILImage): Silence Coverity 10202
	"Dereference after null check".  In fact, UIL output was not
	working at all due to this bug.

	* magick/xwindow.c (MagickXMakeImage): Silence Coverity 44727
	"Dereference after null check".

	* Magick++/lib/Image.cpp (colorMapSize): Silence Coverity 44728
	"Dereference after null check".

	* coders/vid.c (ReadVIDImage): Silence Coverity 44730 "Explicit
	null dereferenced".

	* coders/mpc.c (ReadMPCImage): Silence Coverity 44732 "Dereference
	after null check".

	* Magick++/lib/Image.cpp (signature): Silence Coverity 44735
	"Dereference null return value".

	* coders/ps.c (ReadPSImage): Ghostscript options concatenation
	should be more secure against buffer overflow.

	* coders/pdf.c (ReadPDFImage): Applied patch by Chris Gilling such
	that '-define pdf:stop-on-error=true' will stop PDF processing
	immediately upon an error.
	(ReadPDFImage): Ghostscript options concatenation should be more
	secure against buffer overflow.

2015-03-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/animate.c (MagickXAnimateImages): Silence Coverity 44736
	"Dereference null return value".  Also fixed apparent memory leak
	that Coverity did not notice.

	* coders/fits.c (ReadFITSImage): Silence Coverity 10209
	"Dereference before null check".

	* magick/color_lookup.c (ReadColorConfigureFile): Silence Coverity
	44743 "Dereference before null check".

	* magick/xwindow.c (MagickXMakeImage): Silence Coverity 44745
	"Dereference before null check".

	* coders/pict.c (ReadPICTImage): Hopefully address consequences of