@@ -38,6 +38,10 @@
 <p>2015-03-23  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>wand/drawing_wand.c (DrawSetStrokeDashArray): Silence Coverity
+10117 &quot;Dereference after null check&quot;.</li>
+<li>magick/draw.c (DrawSetStrokeDashArray): Silence Coverity 10150
+&quot;Dereference after null check&quot;.</li>
 <li>wand/drawing_wand.c (DrawPushGraphicContext): Silence Coverity
 10151 &quot;Dereference after null check&quot;.</li>
 </ul>
