@@ -1,5 +1,11 @@
 2015-03-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* wand/drawing_wand.c (DrawSetStrokeDashArray): Silence Coverity
+	10117 "Dereference after null check".
+
+	* magick/draw.c (DrawSetStrokeDashArray): Silence Coverity 10150
+	"Dereference after null check".
+
 	* wand/drawing_wand.c (DrawPushGraphicContext): Silence Coverity
 	10151 "Dereference after null check".
 
